# pymcpserver

./: .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.json  client_example.py  mcp_config.json  openai_agent_example.py  requirements_agents.txt  simple_test.py
src/mcp_file_server/: __init__.py  main.py
tests/: __init__.py  test_build_validation.py  test_fastmcp.py  test_integration.py  test_list_directory.py  test_read_file.py  test_uv_functionality.py  test_uv_mcp_integration.py  test_write_file.py
